--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,19 @@
 </head>
 <body>
 <h1> it Works !!</h1>
+<div>
+
+</div>
 <a th:href="@{/products}" class="btn btn-secondary">
   products
 </a>
+<div>
+  <a th:href="@{/customers/login}" class="btn btn-secondary">
+    Login
+  </a>
+</div>
+
+
+
 </body>
 </html>
