Set up Category controller, category rest controller, all endpoints working in category rest controller, added some pages and a categoryCreateRequest class for the rest endpoints

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,5 +10,6 @@
 <a th:href="@{/products}" class="btn btn-secondary">
   products
 </a>
+<br/><a th:href="@{/categories}" class="btn btn-secondary">categories</a>
 </body>
 </html>
