got category edit working and confirmed delete works but cascade deletes products so I commented category delete out for now

--- a/src/main/resources/templates/category/add-category-form.html
+++ b/src/main/resources/templates/category/add-category-form.html
@@ -36,7 +36,7 @@
 
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-success">
-                                Save Category
+                                Add Category
                             </button>
                             <a th:href="@{/categories/categories-list}" class="btn btn-outline-secondary">
                                 Cancel
