--- a/src/main/resources/templates/category/categories-list.html
+++ b/src/main/resources/templates/category/categories-list.html
@@ -44,7 +44,7 @@
             Edit
           </a>
 <!--          <a th:href="@{/categories/delete/{id}(id=${category.id})}" class="text-danger"-->
-<!--             onclick="return confirm('Are you sure you want to delete this product?');">-->
+<!--             onclick="return confirm('Are you sure you want to delete this category?');">-->
 <!--            Delete-->
 <!--          </a>-->
         </td>
