--- a/src/main/resources/templates/customers/customers.html
+++ b/src/main/resources/templates/customers/customers.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<a class="btn btn-primary" th:href="@{/customer-add}">Add</a>
+<a class="btn btn-primary" th:href="@{/customers/customer-add}">Add</a>
 
 <div class="container mt-4">
     <h1> Products</h1>
