--- a/src/main/resources/templates/customers/customers.html
+++ b/src/main/resources/templates/customers/customers.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <div class="container mt-4">
+    <div>
+        <a th:href="@{/}" class="home-button">
+            <i class="bi bi-house-door me-2"></i>HOME
+        </a>
+    </div>
     <h1>Customer Management</h1>
 
     <!-- Success/Error Messages -->
