--- a/src/main/resources/templates/customers/customer-details.html
+++ b/src/main/resources/templates/customers/customer-details.html
@@ -4,77 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer Details</title>
-    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <link th:href="@{'https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
 
 <div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="mb-0">Product Details</h3>
+                </div>
+                <div class="card-body">
+                    <!-- View-Only Form -->
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label">Customer #</label>
+                            <span class="view-only-field" th:text="${customer.id}"></span>
+                        </div>
 
-    <div>
-        <span style="font-weight: bold">Customer #</span>
-        <span th:text="${customer.id}"></span>
+                        <div class="mb-3">
+                            <label class="form-label">First Name</label>
+                            <span class="view-only-field" th:text="${customer.firstName}"></span>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Last Name</label>
+                            <span class="view-only-field" th:text="${customer.lastName}"></span>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <span class="view-only-field" th:text="${customer.email}"></span>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Phone</label>
+                            <span class="view-only-field" th:text="${customer.phone}"></span>
+                        </div>
+
+
+                        <div class="mb-3">
+                            <label class="form-label">Address</label>
+                            <span class="view-only-field" th:text="${customer.addressLine1}"></span>
+                        </div>
+
+                        <div class="row mb-3">
+                            <div class="col">
+                                <label class="form-label">City</label>
+                                <span class="view-only-field" th:text="${customer.city}"></span>
+                            </div>
+
+                            <div class="col">
+                                <label class="form-label">Province</label>
+                                <span class="view-only-field" th:text="${customer.province}"></span>
+                            </div>
+
+                            <div class="col">
+                                <label class="form-label">Portal Code</label>
+                                <span class="view-only-field" th:text="${customer.postalCode}"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="row mb-3">
+                            <div class="col">
+                                <label class="form-label">Created at</label>
+                                <span class="view-only-field" th:text="${customer.createdAt}"></span>
+                            </div>
+
+
+                            <div class="col">
+                                <label class="form-label">Updated at</label>
+                                <span class="view-only-field" th:text="${customer.updatedAt}"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="d-grid gap-2">
+                            <a class="btn btn-outline-secondary" th:href="@{/customers}">Back to List</a>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div>
-        <span style="font-weight: bold">First Name</span>
-        <span th:text="${customer.firstName}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">Last Name</span>
-        <span th:text="${customer.lastName}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">Email</span>
-        <span th:text="${customer.email}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">Phone</span>
-        <span th:text="${customer.phone}"></span>
-    </div>
-
-
-    <div>
-        <span style="font-weight: bold">Address</span>
-        <span th:text="${customer.addressLine1}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">City</span>
-        <span th:text="${customer.city}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">Province</span>
-        <span th:text="${customer.province}"></span>
-    </div>
-
-    <div>
-        <span style="font-weight: bold">Portal Code</span>
-        <span th:text="${customer.postalCode}"></span>
-    </div>
-
-
-    <div>
-        <span style="font-weight: bold">Created at</span>
-        <span th:text="${customer.createdAt}"></span>
-    </div>
-
-
-    <div>
-        <span style="font-weight: bold">Updated at</span>
-        <span th:text="${customer.updatedAt}"></span>
-    </div>
-
-
-    <div>
-        <a class="btn btn-primary" th:href="@{/customers}">Back to List</a>
-        <a class="btn btn-secondary" th:href="@{/customers/{id}/edit (id=${customer.id})}">Edit</a>
-    </div>
-
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
