fixed customer add page routing not being quite right

--- a/src/main/resources/templates/customers/customers.html
+++ b/src/main/resources/templates/customers/customers.html
@@ -45,7 +45,7 @@
 
         <div class="d-flex justify-content-between mt-4" >
 
-                <a th:href="@{/customers/add}" class="btn btn-success">
+                <a th:href="@{/customers/customer-add}" class="btn btn-success">
                     Add New Customer
                 </a>
 
