added back button and updated redirecting work flow

--- a/src/main/resources/templates/customers/login.html
+++ b/src/main/resources/templates/customers/login.html
@@ -19,6 +19,9 @@
 <body>
 <div class="container py-5">
     <div class="row justify-content-center">
+        <div class="w-100 mb-3">
+            <a class="btn btn-outline-secondary" th:href="@{/}">Back to Dashboard</a>
+        </div>
         <div class="col-md-8 col-lg-6">
             <div class="card login-card">
                 <div class="card-body p-4 p-sm-5">
