fix on typo, changing email input from text to email.

--- a/src/main/resources/templates/customers/customer-add.html
+++ b/src/main/resources/templates/customers/customer-add.html
@@ -48,7 +48,7 @@
                                 <label style="font-weight: bold">Email</label>
 
                                 <input class="form-control"
-                                       type="text" id="email" name="email" required/>
+                                       type="email" id="email" name="email" required/>
                             </div>
 
                             <div class="mb-3">
