--- a/src/main/resources/templates/customers/customer-edit.html
+++ b/src/main/resources/templates/customers/customer-edit.html
@@ -53,7 +53,7 @@
                                 <span style="font-weight: bold">Email</span>
 
                                 <input class="form-control"
-                                       type="text"
+                                       type="email"
                                        th:value="${customer.email}" id="email" name="email" required/>
                             </div>
 
@@ -91,7 +91,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <span style="font-weight: bold">Portal Code</span>
+                                    <span style="font-weight: bold">Postal Code</span>
                                     <input class="form-control"
                                            type="text"
                                            th:value="${customer.postalCode}" id="postalCode" name="postalCode"/>
