--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -54,7 +54,7 @@
 
         <!-- Orders Management -->
         <div class="col-md-6 col-lg-3">
-            <a href="/orders/products-list" class="text-decoration-none">
+            <a href="/orders-dashboard" class="text-decoration-none">
                 <div class="card dashboard-card text-center p-4 bg-white rounded-3">
                     <div class="card-body">
                         <h3>Orders Management</h3>
